# retouch

./: .gitignore  .retouch.json  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  opzioni.cpp  opzioni.h  retouch  tags.json
notes/: remove_file_forever.sh
src/: colorize.hpp  command_core.hpp  command_default.hpp  command_init.hpp  options.hpp  retouch_command_core.hpp  retouch_command_default.hpp  retouch_command_init.hpp  retouch_console_cursor.hpp  retouch_console_escape.hpp  retouch_fs.hpp  retouch_json.hpp  retouch_matcher.hpp  retouch_options.hpp  retouch_project.hpp  retouch_textfile.hpp  retouch_utils.hpp
